# Desing_pattern

./: .clang-format-ignore  .gitattributes  .gitignore  CMakeLists.txt  LICENCE.md  README.md
apps/: CMakeLists.txt  main.cpp
cmake/: VersionFromGit.cmake  util.cmake
external_libs/: CMakeLists.txt
include/YOUR_PROJECT_NAME/YOUR_LIBRARY_1_NAME/: lib1_1.hpp  lib1_2.hpp
include/YOUR_PROJECT_NAME/YOUR_LIBRARY_2_NAME/: lib2.hpp
include/desing_pattern/Abstract_Factory/: Abstract_Factory.hpp
include/desing_pattern/Adapter/: Adapter.hpp
include/desing_pattern/Bridge/: Bridge.hpp
include/desing_pattern/Builder/: Builder.hpp
include/desing_pattern/Composite/: Composite.hpp
include/desing_pattern/Decorator/: Decorator.hpp
include/desing_pattern/Facade/: Facade.hpp
include/desing_pattern/Factory_method/: Factory_method.hpp
include/desing_pattern/Flyweight/: Flyweight.hpp
include/desing_pattern/Prototype/: Prototype.hpp
include/desing_pattern/Proxy/: Proxy.hpp
include/desing_pattern/Singleton/: Singleton.hpp
include/desing_pattern/Static_class/: Static_class.hpp
src/: CMakeLists.txt  ver.h.in
src/Abstract_Factory/: Abstract_Factory.cpp
src/Adapter/: Adapter.cpp
src/Bridge/: Bridge.cpp
src/Builder/: Builder.cpp
src/Composite/: Composite.cpp
src/Decorator/: Decorator.cpp
src/Facade/: Facade.cpp
src/Factory_method/: CMakeLists.txt  Factory_method.cpp
src/Flyweight/: Flyweight.cpp
src/Prototype/: Prototype.cpp
src/Proxy/: Proxy.cpp
src/Singleton/: Singleton.cpp
src/Static_class/: CMakeLists.txt  Static_class.cpp
src/YOUR_LIBRARY_1_NAME/: CMakeLists.txt  lib1_1.cpp  lib1_2.cpp
src/YOUR_LIBRARY_2_NAME/: CMakeLists.txt  lib2.cpp
tests/: CMakeLists.txt
tests/YOUR_TEST_NAME/: CMakeLists.txt  YOUR_TEST_NAME.cpp
